# imobilem-api

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_users.py  0002_create_roles.py  0003_create_refresh_tokens.py  0004_create_authorization_events.py
app/: main.py
app/api/: auth.py  deps.py  documents.py  health.py
app/core/: config.py  database.py  rate_limit.py  security.py
app/core/sap/: client.py
app/models/: authorization_event.py  permissions.py  refresh_token.py  role.py  user.py
app/schemas/: auth.py  base.py  documents.py
app/services/: audit.py  auth.py  documents.py  roles.py  sap_mock_data.py
scripts/: assign_roles.py  create_user.py  seed_roles.py  smoke_sap.py
tests/: conftest.py  test_auth.py  test_documents.py  test_documents_audit.py  test_health.py  test_permissions.py
